[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/draft/DraftScene.gd" type="Script" id=1]
[ext_resource path="res://addons/nodepath_tracker/NodePathTracker.gd" type="Script" id=2]
[ext_resource path="res://assets/smash_theme/smash_theme.theme" type="Theme" id=3]
[ext_resource path="res://scenes/draft/ChoiceView.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/draft/ResultsView.gd" type="Script" id=5]

[node name="DraftScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodePathTracker" type="Node" parent="."]
script = ExtResource( 2 )
nodepaths = [ NodePath("../DraftOptionsView/DraftOptionsContainer"), NodePath("../DraftOptionsView/ButtonTiersContainer"), NodePath("../ContinueButton"), NodePath("../ChoiceView"), NodePath("../DraftOptionsView"), NodePath("../ResultsView") ]

[node name="DraftOptionsView" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DraftOptionsContainer" type="VBoxContainer" parent="DraftOptionsView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 147.0
margin_top = 40.0
margin_right = -133.0
margin_bottom = -170.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTiersContainer" type="Control" parent="DraftOptionsView"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChoiceView" parent="." instance=ExtResource( 4 )]
visible = false

[node name="ResultsView" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResultsInfoContainer" type="VBoxContainer" parent="ResultsView"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 147.0
margin_top = 40.0
margin_right = -133.0
margin_bottom = -170.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
margin_left = 385.0
margin_top = 490.0
margin_right = 630.0
margin_bottom = 558.0
theme = ExtResource( 3 )
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}
